Adds in images and creates initial viewport split with background on left

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -7,6 +7,10 @@
     <title>Sign-Up Form</title>
 </head>
 <body>
-    
+    <section class="sidebar">
+    </section>
+    <section class="main">
+        Placeholder text
+    </section>
 </body>
 </html>
