Updates sidebar with photo credits and styling

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <section class="sidebar">
+        <p class="img-credit">Photo by <a href="https://unsplash.com/@betagamma">Daniil Silantev</a> on 
+            <a href="https://unsplash.com/photos/white-and-black-abstract-painting-9R6NwFop9fs">Unsplash</a>
+        </p>
     </section>
     <section class="main">
         Placeholder text
     </section>
+
 </body>
 </html>
