--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Sign-Up Form</title>
 </head>
 <body>
     <section class="sidebar">
         <div class="hero">
             <img class="hero-img" src="./images/odin-lined.png" alt="The Odin Project Logo">
-            <h1>LOGO</h1>
+            <h1>ODIN</h1>
         </div>
-        <div class="img-credit">Photo by <a href="https://unsplash.com/@betagamma">Daniil Silantev</a> on 
-            <a href="https://unsplash.com/photos/white-and-black-abstract-painting-9R6NwFop9fs">Unsplash</a>
+        <div class="img-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on 
+            <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a>
         </div>
     </section>
     <section class="main">
