Added in basic form elements and basic styling

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -18,7 +18,51 @@
         </div>
     </section>
     <section class="main">
-        Placeholder text
+        <div class="cta">
+            This is not a real online service! You know you need something like this in your 
+            life to help realize your deepest dreams.
+            <br>
+            Sign up <em>now</em> to get started.
+            <br>
+            <br>
+            You <em>know</em> you want to.
+        </div>
+        <form class="form" action="" method="GET" id="sign-up">
+            <legend>Let's do this!</legend>
+            <div class="form-row">
+                <div class="form-element">
+                    <label for="first-name">First Name</label>
+                    <input id="first-name" name="first-name" type="text">
+                </div>
+                <div class="form-element">
+                    <label for="last-name">Last Name</label>
+                    <input id="last-name" name="last-name" type="text">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-element">
+                    <label for="email">Email</label>
+                    <input id="email" name="user-email" type="email">
+                </div>
+                <div class="form-element">
+                    <label for="phone-number">Phone Number</label>
+                    <input id="phone-number" name="user-phone-number" type="tel">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-element">
+                    <label for="password">Password</label>
+                    <input id="password" name="user-password" type="password">
+                </div>
+                <div class="form-element">
+                    <label for="password-confirm">Confirm Password</label>
+                    <input id="password-confirm" name="user-confirm-password" type="password">
+                </div>
+            </div>
+
+            
+
+        </form>
     </section>
 
 </body>
