Adds in create account button and styliing

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -58,11 +58,12 @@
                     <label for="password-confirm">Confirm Password</label>
                     <input id="password-confirm" name="user-confirm-password" type="password">
                 </div>
-            </div>
-
-            
-
+            </div>          
         </form>
+        <div class="form-end">
+            <button type="submit">Create Account</button>
+            <p class="login">Already have an account? <a href="#">Log in</a></p>
+        </div>
     </section>
 
 </body>
