Adds in pattern matching for phone and placeholder for email/phone

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -42,11 +42,11 @@
             <div class="form-row">
                 <div class="form-element">
                     <label for="email">Email</label>
-                    <input id="email" name="user-email" type="email">
+                    <input id="email" name="user-email" type="email" placeholder="user@email.com">
                 </div>
                 <div class="form-element">
                     <label for="phone-number">Phone Number</label>
-                    <input id="phone-number" name="user-phone-number" type="tel">
+                    <input id="phone-number" name="user-phone-number" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="555-555-5555">
                 </div>
             </div>
             <div class="form-row">
