Updates button to work with form and modifies wrapping on CTA text

--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -27,7 +27,7 @@
             <br>
             You <em>know</em> you want to.
         </div>
-        <form class="form" action="" method="GET" id="sign-up">
+        <form class="form" id="sign-up" action="" method="GET" >
             <legend>Let's do this!</legend>
             <div class="form-row">
                 <div class="form-element">
@@ -61,7 +61,7 @@
             </div>          
         </form>
         <div class="form-end">
-            <button type="submit">Create Account</button>
+            <button type="submit" form="sign-up">Create Account</button>
             <p class="login">Already have an account? <a href="#">Log in</a></p>
         </div>
     </section>
