--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="./scripts/script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Sign-Up Form</title>
 </head>
@@ -52,11 +53,12 @@
             <div class="form-row">
                 <div class="form-element">
                     <label for="password">Password</label>
-                    <input id="password" name="user-password" type="password">
+                    <input id="password" name="user-password" type="password" onkeyup="check();">
                 </div>
                 <div class="form-element">
                     <label for="password-confirm">Confirm Password</label>
-                    <input id="password-confirm" name="user-confirm-password" type="password">
+                    <input id="password-confirm" name="user-confirm-password" type="password"onkeyup="check();">
+                    <span id="matched"></span>
                 </div>
             </div>          
         </form>
