--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
 </head>
@@ -26,10 +27,11 @@
         </section>
     </section>
     <section class="sidebar">
+        Sidebar
     </section>
 
     <section class="main">
-
+        Main body
     </section>
 </body>
 </html>
