Modifies background colors

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -27,7 +27,52 @@
         </section>
     </section>
     <section class="sidebar">
-        Sidebar
+        <div class="sidebar-header">
+            <img src="" alt="Dashboard logo">
+            <div class="sidebar-text">Dashboard</div>
+        </div>>
+        <section class="nav">
+            <ul class="nav-top">
+                <li class="sidebar-link">
+                    <img src="" alt="Home icon">
+                    <div class="sidebar-text">Home</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Profile icon">
+                    <div class="sidebar-text">Profile</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Messages icon">
+                    <div class="sidebar-text">Messages</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="History icon">
+                    <div class="sidebar-text">History</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Tasks icon">
+                    <div class="sidebar-text">Tasks</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Communities icon">
+                    <div class="sidebar-text">Communities</div>
+                </li>
+            </ul>
+            <ul class="nav-bottom">
+                <li class="sidebar-link">
+                    <img src="" alt="Settings icon">
+                    <div class="sidebar-text">Settings</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Support icon">
+                    <div class="sidebar-text">Support</div>
+                </li>
+                <li class="sidebar-link">
+                    <img src="" alt="Privacy icon">
+                    <div class="sidebar-text">Privacy</div>
+                </li>
+            </ul>
+        </section>
     </section>
 
     <section class="main">
