Adds in icons for sidebar

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -34,41 +34,41 @@
         <section class="nav">
             <ul class="nav-top">
                 <li class="sidebar-link">
-                    <img src="" alt="Home icon">
+                    <img src="./images/home.svg" alt="Home icon">
                     <div class="sidebar-text">Home</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Profile icon">
+                    <img src="./images/profile.svg" alt="Profile icon">
                     <div class="sidebar-text">Profile</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Messages icon">
+                    <img src="./images/messages.svg" alt="Messages icon">
                     <div class="sidebar-text">Messages</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="History icon">
+                    <img src="./images/history.svg" alt="History icon">
                     <div class="sidebar-text">History</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Tasks icon">
+                    <img src="./images/tasks.svg" alt="Tasks icon">
                     <div class="sidebar-text">Tasks</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Communities icon">
+                    <img src="./images/communities.svg" alt="Communities icon">
                     <div class="sidebar-text">Communities</div>
                 </li>
             </ul>
             <ul class="nav-bottom">
                 <li class="sidebar-link">
-                    <img src="" alt="Settings icon">
+                    <img src="./images/settings.svg" alt="Settings icon">
                     <div class="sidebar-text">Settings</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Support icon">
+                    <img src="./images/support.svg" alt="Support icon">
                     <div class="sidebar-text">Support</div>
                 </li>
                 <li class="sidebar-link">
-                    <img src="" alt="Privacy icon">
+                    <img src="./images/privacy.svg" alt="Privacy icon">
                     <div class="sidebar-text">Privacy</div>
                 </li>
             </ul>
