Implements styling for sidebar header

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -28,9 +28,9 @@
     </section>
     <section class="sidebar">
         <div class="sidebar-header">
-            <img src="" alt="Dashboard logo">
+            <img src="./images/dashboard.svg" alt="Dashboard logo">
             <div class="sidebar-text">Dashboard</div>
-        </div>>
+        </div>
         <section class="nav">
             <ul class="nav-top">
                 <li class="sidebar-link">
