Creates initial styling and elements for the top half of the header bar

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -11,11 +11,13 @@
 <body>
     <section class="header">
         <section class="search-bar">
-            <div class="search"></div>
-            <div class="search-field"></div>
-            <div class="alarm-bell"></div>
-            <div class="user-logo"></div>
-            <div class="user-name"></div>
+            <img src="./images/search.svg" alt="Search Icon" class="search-logo">
+            <input type="text" class="search-field" placeholder="Search...">
+            <div class="search-buttons">
+                <img src="./images/notifications.svg" alt="Notifications Icon" class="alarm-bell">
+                <img src="./images/account-circle.svg" alt="User Profile Icon" class="user-logo">
+                <div class="user-name">Morgan Oakley</div>
+            </div>
         </section>
         <section class="user-bar">
             <div class="user-logo"></div>
