Modifies styling for the rest of the header bar

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -20,12 +20,16 @@
             </div>
         </section>
         <section class="user-bar">
-            <div class="user-logo"></div>
-            <div class="greeting"></div>
-            <div class="user-name"></div>
-            <button type="button" id="new">New</button>
-            <button type="button" id="upload">Upload</button>
-            <button type="button" id="share">Share</button>
+            <img src="./images/account-circle.svg" alt="User Profile Icon" class="user-logo">
+            <div class="welcome">
+                <div class="greeting">Hi there,</div>
+                <div class="user-name">Morgan Oakley (@morgan)</div>
+            </div>
+            <div class="action-buttons">
+                <button type="button" id="new">New</button>
+                <button type="button" id="upload">Upload</button>
+                <button type="button" id="share">Share</button>
+            </div>
         </section>
     </section>
     <section class="sidebar">
