Creates main content grid, card, and stylizes the card

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/style.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
@@ -81,8 +81,26 @@
         </section>
     </section>
 
-    <section class="main">
-        Main body
-    </section>
+    <main>
+        <section class="content">
+            <div class="projects">
+                <div class="card">
+                    <h4>Super Cool Project</h4>
+                    <p>                       
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+            </div>
+            <div class="main-sidebar">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
