--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -87,8 +87,80 @@
                 <div class="card">
                     <h4>Super Cool Project</h4>
                     <p>                       
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi.
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse sollicitudin nibh erat, id
+                        facilisis felis accumsan nec.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h4>Less Cool Project</h4>
+                    <p>                       
+                        Nullam condimentum ipsum ut lectus vehicula
+                        consectetur. Quisque sed dolor tincidunt,
+                        consectetur sapien et, facilisis dolor. Duis sem
+                        purus, dignissim ut sapien in, varius
+                        pellentesque lacus.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h4>Impossible App</h4>
+                    <p>                       
+                        In hac habitasse platea dictumst. Vivamus
+                        dictum rutrum arcu, a placerat velit sagittis
+                        id.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h4>Easy Peasy App</h4>
+                    <p>                       
+                        Etiam cursus eros ac efficitur fringilla.
+                        Vestibulum dignissim urna get accumsan
+                        aliquam. Curabitur dignissim nisi in tortor
+                        commodo, ac bibendum magna tincidunt.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h4>Ad Blocker</h4>
+                    <p>                       
+                        Quisque eget rutrum isl. Nam auque
+                        justo, cursus vitae metus vel, pharetra
+                        hendrerit felis. Aliquam sed malesuada
+                        eros.
+                    </p>
+                    <div class="card-actions">
+                        <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                        <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                        <img src="./images/source-fork.svg" alt="Fork Icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h4>Money Maker</h4>
+                    <p>                       
+                        Present convallis, libero quis congue
+                        elementum, nunc ante faucibus sapien, ac
+                        scelerisque tortor purus sit amet ex.
+                        Pellentesque mollis nec sem vel aliquam
+                      
                     </p>
                     <div class="card-actions">
                         <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
