Adds in box shadow for header bar

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -9,7 +9,7 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <section class="header">
+    <div class="header">
         <section class="search-bar">
             <img src="./images/search.svg" alt="Search Icon" class="search-logo">
             <input type="text" class="search-field" placeholder="Search...">
@@ -31,7 +31,7 @@
                 <button type="button" id="share">Share</button>
             </div>
         </section>
-    </section>
+    </div>
     <section class="sidebar">
         <div class="sidebar-header">
             <img src="./images/dashboard.svg" alt="Dashboard logo">
@@ -84,6 +84,7 @@
     <main>
         <section class="content">
             <div class="projects">
+                <h3>Your Projects</h3>
                 <div class="card">
                     <h4>Super Cool Project</h4>
                     <p>                       
