Initial styling and content for announcements sidebar

--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -171,7 +171,52 @@
                 </div>
             </div>
             <div class="main-sidebar">
-
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="news-list">
+                        <div class="news-item">
+                            <h4>Site Maintenance</h4>
+                            <p>                       
+                                Vestibulum condimentum tells lacus,
+                                in accumsan elit maximus ac. Donec
+                                hendrerit sodales congue...
+                            </p>
+                        </div>
+                        <div class="news-item">
+                            <h4>Community Share Day</h4>
+                            <p>                       
+                                Nam vel lectus tincidunt, rutrum nulla
+                                eu, ornare libero. Aliquam dictum
+                                accumsan porttitor...
+                            </p>
+                        </div>
+                        <div class="news-item">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>                       
+                                Phasellus efficitur nisi get elit
+                                consectetur, eget condimentum ante
+                                auctor. Cras fringilla sagittis sem in
+                                mattis...
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>                       
+                            Sed tempus ut lacus ut scelerisque.
+                            Suspendisse sollicitudin nibh erat, id
+                            facilisis felis accumsan nec.
+                        </p>
+                        <div class="card-actions">
+                            <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
+                            <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
+                            <img src="./images/source-fork.svg" alt="Fork Icon">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
