--- a/admin_dashboard/index.html
+++ b/admin_dashboard/index.html
@@ -171,51 +171,81 @@
                 </div>
             </div>
             <div class="main-sidebar">
-                <div class="announcements">
-                    <h3>Announcements</h3>
-                    <div class="news-list">
-                        <div class="news-item">
-                            <h4>Site Maintenance</h4>
-                            <p>                       
-                                Vestibulum condimentum tells lacus,
-                                in accumsan elit maximus ac. Donec
-                                hendrerit sodales congue...
-                            </p>
-                        </div>
-                        <div class="news-item">
-                            <h4>Community Share Day</h4>
-                            <p>                       
-                                Nam vel lectus tincidunt, rutrum nulla
-                                eu, ornare libero. Aliquam dictum
-                                accumsan porttitor...
-                            </p>
-                        </div>
-                        <div class="news-item">
-                            <h4>Updated Privacy Policy</h4>
-                            <p>                       
-                                Phasellus efficitur nisi get elit
-                                consectetur, eget condimentum ante
-                                auctor. Cras fringilla sagittis sem in
-                                mattis...
-                            </p>
-                        </div>
+                <h3>Announcements</h3>
+                <div class="news-list">
+                    <div class="news-item">
+                        <h4>Site Maintenance</h4>
+                        <p>                       
+                            Vestibulum condimentum tells lacus,
+                            in accumsan elit maximus ac. Donec
+                            hendrerit sodales congue...
+                        </p>
+                    </div>
+                    <div class="news-item">
+                        <h4>Community Share Day</h4>
+                        <p>                       
+                            Nam vel lectus tincidunt, rutrum nulla
+                            eu, ornare libero. Aliquam dictum
+                            accumsan porttitor...
+                        </p>
+                    </div>
+                    <div class="news-item">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>                       
+                            Phasellus efficitur nisi get elit
+                            consectetur, eget condimentum ante
+                            auctor. Cras fringilla sagittis sem in
+                            mattis...
+                        </p>
                     </div>
                 </div>
-                <div class="trending">
-                    <h3>Trending</h3>
-                    <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>                       
-                            Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
-                        </p>
-                        <div class="card-actions">
-                            <img src="./images/star-plus-outline.svg" alt="Favorite Icon">
-                            <img src="./images/eye-plus-outline.svg" alt="Watch Icon">
-                            <img src="./images/source-fork.svg" alt="Fork Icon">
+                <h3>Trending</h3>
+                <div class="user-list">
+                    <div class="user">
+                        <img src="./images/account-circle.svg" alt="User Profile Icon">
+                        <div>
+                            <div class="username">
+                                @tegan
+                            </div>
+                            <div class="description">
+                                World Peace Builder
+                            </div>
                         </div>
                     </div>
+                    <div class="user">
+                        <img src="./images/account-circle.svg" alt="User Profile Icon">
+                        <div>
+                            <div class="username">
+                                @morgan
+                            </div>
+                            <div class="description">
+                                Super Cool Project
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./images/account-circle.svg" alt="User Profile Icon">
+                        <div>
+                            <div class="username">
+                                @kendall
+                            </div>
+                            <div class="description">
+                                Life Changing App
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./images/account-circle.svg" alt="User Profile Icon">
+                        <div>
+                            <div class="username">
+                                @alex
+                            </div>
+                            <div class="description">
+                                No Traffic Maker
+                            </div>
+                        </div>
+                    </div>
+                
                 </div>
             </div>
         </section>
